# mpd-xbar-demo

./: Cargo.toml  LICENSE  README.md
src/: main.rs
