[package]
name = "mpd-xbar"
version = "0.1.0"
edition = "2021"
authors = ["Korny Sietsma <korny.sietsma@liberis.com>"]
readme = "README.md"
# license = "MIT"  # https://spdx.org/licenses/
# categories = [] # https://crates.io/category_slugs
# keywords = [] # free text


[dependencies]
anyhow = "1.0.91"
log = "0.4.22"
simplelog = "^0.12.0"
bitbar = "0.10.1"
mpd = "0.1.0"
